fix: firefox vertical align center

--- a/interface/themes/login_page.scss
+++ b/interface/themes/login_page.scss
@@ -30,6 +30,7 @@ body.login {
   display: flex;
   justify-content: center;
   resize: both;
+  height: 100%;
 }
 
 .login-failure {
